[gd_scene load_steps=4 format=2]

[ext_resource path="res://profile/editor/face_selection.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.6, 0.254902, 1 )

[node name="FaceSelection" type="Panel"]
rect_min_size = Vector2( 25, 25 )
mouse_default_cursor_shape = 13
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="Panel" parent="."]
margin_right = 10.0
margin_bottom = 10.0
mouse_default_cursor_shape = 12
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRight" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -10.0
margin_bottom = 10.0
grow_horizontal = 0
mouse_default_cursor_shape = 11
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLeft" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -10.0
margin_right = 10.0
grow_vertical = 0
mouse_default_cursor_shape = 11
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="TopLeft" to="." method="_on_TopLeft_gui_input"]
[connection signal="gui_input" from="TopRight" to="." method="_on_TopRight_gui_input"]
[connection signal="gui_input" from="BottomLeft" to="." method="_on_BottomLeft_gui_input"]
[connection signal="gui_input" from="BottomRight" to="." method="_on_BottomRight_gui_input"]
